--- a/index.html
+++ b/index.html
@@ -25,8 +25,24 @@
                 ME</a>
         </div>
         <div class="haf">
-            <img src="edit.png" alt="">
+            <img src="images/edit.png" alt="">
         </div>
+    </section>
+    <section class="dream">
+        <div class="haf">
+            <img src="images/my-bg.png" alt="">
+         </div>
+         <div class="haf">
+             <h1>Dream Big</h1>
+             <h3>
+                Become a web developer
+             </h3>
+             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+
+
+         </div>
+
     </section>
 </body>
 
